# git_gihub_app

./: .eslintrc.js  .gitignore  404.html  CONTRIBUTING.md  ENHANCEMENTS.md  FIXES.md  LICENSE  README-ENHANCED.md  README.md  create_screenshots.sh  deploy.sh  deploy_gh_pages.sh  direct_push.sh  final_push.sh  fix_actions.sh  fix_all.sh  fix_deployment.sh  fix_video.sh  force_update.sh  git_github_app.html  index.html  manual_push.sh  package-lock.json  package.json  pull_and_update.sh  push_fixes.sh  push_to_github.sh  pyproject.toml  redeploy.sh  tailwind.config.js  test_fixes.sh  update_actions_v4.sh  update_branches.sh  update_readme.sh  vite.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  pages.yml
.specstory/history/: 2025-07-15_23-46Z-review-my-app,-create-a-venv,-gitignore,-toml,-pro.md
assets/: index-CdjEYyaL.css  index-vKokqWI5.js  index-vKokqWI5.js.map
public/: 404.html  CNAME  manifest.json
src/: App.jsx  index.css  main.jsx
src/components/: CodingChallenge.jsx  Dashboard.jsx  InteractiveExercise.jsx  InteractiveTerminal.jsx  LessonViewer.jsx  OnboardingScreen.jsx  UserWiki.jsx  WelcomeScreen.jsx
src/data/: enhanced-lesson.js  lessons-updated.js
src/resources/: CommandReference.jsx  GitCheatSheet.jsx  GitDocs.jsx  GitHubCheatSheet.jsx  GitHubDocs.jsx
src/utils/: security.js
