[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-mastery-app"
version = "1.0.0"
description = "An interactive Git learning platform with AI-assisted development features"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wayne Trout", email = "waynetrout@example.com"}
]
keywords = ["git", "learning", "education", "react", "vite", "ai-assisted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: JavaScript",
    "Topic :: Education",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/waynetrout/git-mastery-app"
Repository = "https://github.com/waynetrout/git-mastery-app.git"
"Bug Tracker" = "https://github.com/waynetrout/git-mastery-app/issues"
Documentation = "https://github.com/waynetrout/git-mastery-app#readme"

[tool.eslint]
extends = ["@eslint/js", "eslint:recommended"]
env = {
    browser = true,
    es2020 = true,
    node = true
}
parserOptions = {
    ecmaVersion = "latest",
    sourceType = "module",
    ecmaFeatures = {
        jsx = true
    }
}
plugins = ["react", "react-hooks", "react-refresh"]
rules = {
    "react-refresh/only-export-components" = [
        "warn",
        { allowConstantExport = true }
    ]
}

[tool.prettier]
semi = true
singleQuote = true
tabWidth = 2
trailingComma = "es5"
printWidth = 80
bracketSpacing = true
arrowParens = "avoid"
